@@ -362,9 +362,9 @@ public class RandomChoice
         }
 
 
-	public static final int CHECKBOUNDARY = 8;
-	
-   /** Picks a random item from an array of probabilities,
+    public static final int CHECKBOUNDARY = 8;
+        
+    /** Picks a random item from an array of probabilities,
         normalized and summed as follows:  For example,
         if four probabilities are {0.3, 0.2, 0.1, 0.4}, then
         they should get normalized and summed by the outside owners
@@ -373,19 +373,19 @@ public class RandomChoice
 
     public static int pickFromDistribution(final float[] probabilities,
         final float prob)
-		{
-		return pickFromDistribution(probabilities, prob, CHECKBOUNDARY);
-		}
+        {
+        return pickFromDistribution(probabilities, prob, CHECKBOUNDARY);
+        }
 
     
-     /** Picks a random item from an array of probabilities,
+    /** Picks a random item from an array of probabilities,
         normalized and summed as follows:  For example,
         if four probabilities are {0.3, 0.2, 0.1, 0.4}, then
         they should get normalized and summed by the outside owners
         as: {0.3, 0.5, 0.6, 1.0}.  If probabilities.length < checkboundary,
         then a linear search is used, else a binary search is used.
-		@deprecated
-		*/
+        @deprecated
+    */
     public static int pickFromDistribution(final float[] probabilities,
         final float prob, final int checkboundary)
         {
@@ -439,9 +439,9 @@ public class RandomChoice
 
     public static int pickFromDistribution(final double[] probabilities,
         final double prob)
-		{
-		return pickFromDistribution(probabilities, prob, CHECKBOUNDARY);
-		}
+        {
+        return pickFromDistribution(probabilities, prob, CHECKBOUNDARY);
+        }
 
     
     /** Picks a random item from an array of probabilities,
@@ -450,8 +450,8 @@ public class RandomChoice
         they should get normalized and summed by the outside owners
         as: {0.3, 0.5, 0.6, 1.0}.  If probabilities.length < checkboundary,
         then a linear search is used, else a binary search is used.
-		@deprecated
-		*/
+        @deprecated
+    */
     
     public static int pickFromDistribution(final double[] probabilities,
         final double prob, final int checkboundary)
@@ -509,9 +509,9 @@ public class RandomChoice
     public static int pickFromDistribution(final Object[] objs, 
         final RandomChoiceChooser chooser,
         final float prob)
-		{
-		return pickFromDistribution(objs, chooser, prob, CHECKBOUNDARY);
-		}
+        {
+        return pickFromDistribution(objs, chooser, prob, CHECKBOUNDARY);
+        }
 
     /** Picks a random item from an array of objects, each with an
         associated probability that is accessed by taking an object
@@ -522,8 +522,8 @@ public class RandomChoice
         they should get normalized and summed by the outside owners
         as: {0.3, 0.5, 0.6, 1.0}.  If probabilities.length < checkboundary,
         then a linear search is used, else a binary search is used.
-		@deprecated
-		*/
+        @deprecated
+    */
     
     public static int pickFromDistribution(final Object[] objs, 
         final RandomChoiceChooser chooser,
@@ -583,9 +583,9 @@ public class RandomChoice
         final RandomChoiceChooserD chooser,
         final double prob)
         {
-		return pickFromDistribution(objs, chooser, prob, CHECKBOUNDARY);
-		}
-		
+        return pickFromDistribution(objs, chooser, prob, CHECKBOUNDARY);
+        }
+                
     /** Picks a random item from an array of objects, each with an
         associated probability that is accessed by taking an object
         and passing it to chooser.getProbability(obj).  The objects'
@@ -595,8 +595,8 @@ public class RandomChoice
         they should get normalized and summed by the outside owners
         as: {0.3, 0.5, 0.6, 1.0}.  If probabilities.length < checkboundary,
         then a linear search is used, else a binary search is used.
-		@deprecated
-		*/
+        @deprecated
+    */
     
     public static int pickFromDistribution(final Object[] objs, 
         final RandomChoiceChooserD chooser,
