@@ -186,63 +186,63 @@ public class VectorSpecies extends Species
         this.state = state;
         
         String genomeSizeForm = state.parameters.getString(base.push(P_GENOMESIZE),def.push(P_GENOMESIZE));
-		if (genomeSizeForm.equals(V_GEOMETRIC))
-			{
-			genomeSize = 1;
-			genomeResizeAlgorithm = C_GEOMETRIC;
-			chunksize = state.parameters.getIntWithDefault(base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE),1);
-			if (chunksize != 1)
-				state.output.fatal("To use Geometric size initialization, VectorSpecies must have a chunksize of 1",
-					base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
-			minInitialSize = state.parameters.getInt(base.push(P_UNIFORM_MIN),def.push(P_UNIFORM_MIN), 0);
-			if (minInitialSize < 0)
-				{
-				state.output.warning("Gemoetric size initialization used, but no minimum initial size provided.  Assuming minimum is 0.");
-				minInitialSize = 0;
-				}
-			genomeIncreaseProbability = state.parameters.getFloatWithMax(base.push(P_GEOMETRIC_PROBABILITY),def.push(P_GEOMETRIC_PROBABILITY),0.0, 1.0);
-			if (genomeIncreaseProbability < 0.0 || genomeIncreaseProbability >= 1.0)  // note >=
-				state.output.fatal("To use Gemoetric size initialization, the genome increase probability must be >= 0.0 and < 1.0",
-					base.push(P_GEOMETRIC_PROBABILITY),def.push(P_GEOMETRIC_PROBABILITY));
-			}
-		else if (genomeSizeForm.equals(V_UNIFORM))
-			{
-			genomeSize = 1;
-			genomeResizeAlgorithm = C_UNIFORM;
-			chunksize = state.parameters.getIntWithDefault(base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE),1);
-			if (chunksize != 1)
-				state.output.fatal("To use Uniform size initialization, VectorSpecies must have a chunksize of 1",
-					base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
-			minInitialSize = state.parameters.getInt(base.push(P_UNIFORM_MIN),def.push(P_UNIFORM_MIN),0);
-			if (minInitialSize < 0)
-				state.output.fatal("To use Uniform size initialization, you must set a minimum initial size >= 0",
-					base.push(P_UNIFORM_MIN),def.push(P_UNIFORM_MIN));
-			maxInitialSize = state.parameters.getInt(base.push(P_UNIFORM_MAX),def.push(P_UNIFORM_MAX),0);
-			if (maxInitialSize < 0)
-				state.output.fatal("To use Uniform size initialization, you must set a maximum initial size >= 0",
-					base.push(P_UNIFORM_MAX),def.push(P_UNIFORM_MAX));
-			if (maxInitialSize < minInitialSize)
-				state.output.fatal("To use Uniform size initialization, you must set a maximum initial size >= the minimum initial size",
-					base.push(P_UNIFORM_MAX),def.push(P_UNIFORM_MAX));
-			}
-		else  // it's a number
-			{
-			genomeSize = state.parameters.getInt(base.push(P_GENOMESIZE),def.push(P_GENOMESIZE),1);
-			if (genomeSize==0)
-				state.output.error("VectorSpecies must have a genome size > 0",
-					base.push(P_GENOMESIZE),def.push(P_GENOMESIZE));
-			
-			genomeResizeAlgorithm = C_NONE;
+        if (genomeSizeForm.equals(V_GEOMETRIC))
+            {
+            genomeSize = 1;
+            genomeResizeAlgorithm = C_GEOMETRIC;
+            chunksize = state.parameters.getIntWithDefault(base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE),1);
+            if (chunksize != 1)
+                state.output.fatal("To use Geometric size initialization, VectorSpecies must have a chunksize of 1",
+                    base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
+            minInitialSize = state.parameters.getInt(base.push(P_UNIFORM_MIN),def.push(P_UNIFORM_MIN), 0);
+            if (minInitialSize < 0)
+                {
+                state.output.warning("Gemoetric size initialization used, but no minimum initial size provided.  Assuming minimum is 0.");
+                minInitialSize = 0;
+                }
+            genomeIncreaseProbability = state.parameters.getFloatWithMax(base.push(P_GEOMETRIC_PROBABILITY),def.push(P_GEOMETRIC_PROBABILITY),0.0, 1.0);
+            if (genomeIncreaseProbability < 0.0 || genomeIncreaseProbability >= 1.0)  // note >=
+                state.output.fatal("To use Gemoetric size initialization, the genome increase probability must be >= 0.0 and < 1.0",
+                    base.push(P_GEOMETRIC_PROBABILITY),def.push(P_GEOMETRIC_PROBABILITY));
+            }
+        else if (genomeSizeForm.equals(V_UNIFORM))
+            {
+            genomeSize = 1;
+            genomeResizeAlgorithm = C_UNIFORM;
+            chunksize = state.parameters.getIntWithDefault(base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE),1);
+            if (chunksize != 1)
+                state.output.fatal("To use Uniform size initialization, VectorSpecies must have a chunksize of 1",
+                    base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
+            minInitialSize = state.parameters.getInt(base.push(P_UNIFORM_MIN),def.push(P_UNIFORM_MIN),0);
+            if (minInitialSize < 0)
+                state.output.fatal("To use Uniform size initialization, you must set a minimum initial size >= 0",
+                    base.push(P_UNIFORM_MIN),def.push(P_UNIFORM_MIN));
+            maxInitialSize = state.parameters.getInt(base.push(P_UNIFORM_MAX),def.push(P_UNIFORM_MAX),0);
+            if (maxInitialSize < 0)
+                state.output.fatal("To use Uniform size initialization, you must set a maximum initial size >= 0",
+                    base.push(P_UNIFORM_MAX),def.push(P_UNIFORM_MAX));
+            if (maxInitialSize < minInitialSize)
+                state.output.fatal("To use Uniform size initialization, you must set a maximum initial size >= the minimum initial size",
+                    base.push(P_UNIFORM_MAX),def.push(P_UNIFORM_MAX));
+            }
+        else  // it's a number
+            {
+            genomeSize = state.parameters.getInt(base.push(P_GENOMESIZE),def.push(P_GENOMESIZE),1);
+            if (genomeSize==0)
+                state.output.error("VectorSpecies must have a genome size > 0",
+                    base.push(P_GENOMESIZE),def.push(P_GENOMESIZE));
+                        
+            genomeResizeAlgorithm = C_NONE;
 
-			chunksize = state.parameters.getIntWithDefault(base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE),1);
-			if (chunksize <= 0 || chunksize > genomeSize)
-				state.output.fatal("VectorSpecies must have a chunksize which is > 0 and < genomeSize",
-					base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
-			if (genomeSize % chunksize != 0)
-				state.output.fatal("VectorSpecies must have a genomeSize which is a multiple of chunksize",
-					base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
-			}
-				
+            chunksize = state.parameters.getIntWithDefault(base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE),1);
+            if (chunksize <= 0 || chunksize > genomeSize)
+                state.output.fatal("VectorSpecies must have a chunksize which is > 0 and < genomeSize",
+                    base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
+            if (genomeSize % chunksize != 0)
+                state.output.fatal("VectorSpecies must have a genomeSize which is a multiple of chunksize",
+                    base.push(P_CHUNKSIZE),def.push(P_CHUNKSIZE));
+            }
+                                
         mutationProbability = state.parameters.getFloatWithMax(
             base.push(P_MUTATIONPROB),def.push(P_MUTATIONPROB),0.0,1.0);
         if (mutationProbability==-1.0)
@@ -298,20 +298,20 @@ public class VectorSpecies extends Species
         {
         VectorIndividual newind = (VectorIndividual)(super.newIndividual(state, thread));
 
-		if (genomeResizeAlgorithm == C_NONE)
-			newind.reset( state, thread );
-		else if (genomeResizeAlgorithm == C_UNIFORM)
-			{
-			int size = state.random[thread].nextInt(maxInitialSize - minInitialSize + 1) + minInitialSize;
-			newind.reset(state, thread, size);
-			}
-		else if (genomeResizeAlgorithm == C_GEOMETRIC)
-			{
-			int size = minInitialSize;
-			while(state.random[thread].nextBoolean(genomeIncreaseProbability)) size++;
-			newind.reset(state, thread, size);
-			}
-			
+        if (genomeResizeAlgorithm == C_NONE)
+            newind.reset( state, thread );
+        else if (genomeResizeAlgorithm == C_UNIFORM)
+            {
+            int size = state.random[thread].nextInt(maxInitialSize - minInitialSize + 1) + minInitialSize;
+            newind.reset(state, thread, size);
+            }
+        else if (genomeResizeAlgorithm == C_GEOMETRIC)
+            {
+            int size = minInitialSize;
+            while(state.random[thread].nextBoolean(genomeIncreaseProbability)) size++;
+            newind.reset(state, thread, size);
+            }
+                        
         return newind;
         }
     }
